# learn_rust

./: .editorconfig  .gitattributes  .gitignore  .prettierrc.json  Cargo.toml  LICENSE  README.md
01.guess_number/: Cargo.toml
01.guess_number/src/: main.rs
04.struct/src/: main.rs
06.packages_crates_modules_paths/: Cargo.toml
10.error_handling/: Cargo.toml
12.trait/: Cargo.toml
18.cargo/: Cargo.toml  README.md
19.smart_pointer/: Cargo.toml
2.common_programming_concepts/: Cargo.toml
22.patterns_matching/: Cargo.toml
24.advanced_trait/: Cargo.toml
25.advanced_type/: Cargo.toml
26.advanced_fn_closure/: Cargo.toml
27.macro/: Cargo.toml
28.single_web_server/: 404.html  Cargo.toml  index.html
29.num_cmp/: Cargo.toml
30.fs/: a.txt
30.rust_web_full_stack/: Cargo.toml  README.md
31.rust_web_full_stack_foreplay/: README.md
32.rust_web_full_stack/: .env  Cargo.toml  README.md  course.sql  teacher.sql
32.rust_web_full_stack/server/: Cargo.toml
32.rust_web_full_stack/server/src/: db_access.rs  error.rs  handlers.rs  main.rs  models.rs  routers.rs  state.rs
32.rust_web_full_stack/server/src/db_access/: course.rs  teacher.rs
32.rust_web_full_stack/server/src/handlers/: course.rs
32.rust_web_full_stack/server/src/models/: course.rs  teacher.rs
32.rust_web_full_stack/src/: main.rs  routers.rs
32.rust_web_full_stack/src/handlers/: course.rs  general.rs  mod.rs  teacher.rs
32.rust_web_full_stack/src/models/: mod.rs
33.webassembly_greedy_snake/: Cargo.toml  README.md  nodemon.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
33.webassembly_greedy_snake/src/: lib.rs
33.webassembly_greedy_snake/www/: index.html  index.ts  package.json
34.basic_async/: Cargo.toml
35.rust_async/: Cargo.toml
35.rust_async_getting_started/: Cargo.toml
36.future_trait/: Cargo.toml
37.waker/: Cargo.toml
38.executor/: Cargo.toml
4.struct/: Cargo.toml
5.enmus_pattern_matching/: Cargo.toml
7.packages_crates_modules/: Cargo.toml
99.pointer/: Cargo.toml
99.rust_advanced/: Cargo.toml
999.sweet_points/: Cargo.toml  README.md
src/: main.rs
(+73 files in other folders)
