[package]
name = "server"
version = "0.1.0"
edition = "2021"
default-run = "teacher_service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-rt = "2.7"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "server1"

[[bin]]
name = "teacher_service"
